@@ -1,3 +1,9 @@
+Thu Dec  2 19:28:06 GMT 2010  Colin Watson  <cjwatson@debian.org>
+
+	* src/catman.c (parse_for_sec): Format ARG_MAX - arg_size using %zd.
+	* src/manp.c (has_mandir): Cast printf field precisions to int.
+	  (create_pathlist): Use %td to format pointer differences.
+
 Thu Dec  2 19:23:36 GMT 2010  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (make_display_command): Make sure the returned pipeline
